<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="sg.edu.nus.iss.phoenix.core.android.ui.MainScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Phoenix"
        android:textColor="@color/white"
        android:textSize="35dp"
        tools:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
        android:text="Welcome to Phoenix Radio Corporation"
        android:textColor="@color/white"
        android:textSize="15dp"
        tools:textColor="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:hint="@string/hint_username"
            android:textSize="15dp"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->



        <Button
            android:id="@+id/button_radio_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_program"
            android:textColor="@color/btn_login" />

        <Button
            android:id="@+id/button_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_schedule"
            android:textColor="@color/btn_login" />

        <Button
            android:id="@+id/button_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_user"
            android:textColor="@color/btn_login" />
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_logout"
            android:textColor="@color/btn_login" />
        <!-- Link to Login Screen -->

    </LinearLayout>


</LinearLayout>
